The validation of comma separation, non-acceptance of characters, uppercase or lowercase letters is performed

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="container-form">
         <div class="form-body">
-          <h4>Digite los datos de entrada</h4>
-          <h5>(Por favor, séparelos por una coma)</h5>
+          <h4>Enter the input data</h4>
+          <h5>Please, separate them by a comma</h5>
 
           <div class="times">
             <label>Arrival Times</label><br>
@@ -30,7 +30,7 @@
             <input placeholder="Example: 2,4,6,8,10" type="text" class="burst-time">
           </div>
           <div class="send">
-            <button type="button" id="btnLeer">Enviar</button>
+            <button type="button" id="btnLeer">Solve</button>
           </div>
         </div>
     </div>
@@ -38,7 +38,7 @@
 
       <div class="table-answer">
         <div class="header">
-          <h2>Datos de salida</h2>
+          <h2>Output data</h2>
           <h2 id="algorithm">FCFS</h2>
         </div>
         <div id="tabla">
