As many validations as possible are performed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
   <div class="main">
     <div class="title-page">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/UFPS_Logo.png/640px-UFPS_Logo.png" class="logo-ufps">
+      <img src="https://ingsistemas.cloud.ufps.edu.co/rsc/Sistema%20Documental/logo_horizontal.jpg" class="logo-sistemas">
       <h1>Algorithm: First Come First Serve, FCFS</h1>
     </div>
     <div class="container">
@@ -53,6 +55,8 @@
 </footer>
   <script src="js/script.js"></script>
   <script src="https://kit.fontawesome.com/379287da3b.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 </body>
 
