Gantt chart generation is added.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
         </div>
         <div id="tabla" class="tabla">
         </div>
+        <div id="chart" class="chart">
+              <div id="h3">
+
+              </div>
+              <div id="gantt" class="gantt">
+
+              </div>
+              <div id="burst" class="burst">
+
+              </div>
+        </div>
       </div>
     </div>
   </div>
